--- a/ImageConverter/pom.xml
+++ b/ImageConverter/pom.xml
@@ -17,6 +17,7 @@
   </properties>
  
   <build>
+  	<defaultGoal>install</defaultGoal>
     <pluginManagement>
       <plugins>
         <plugin>
@@ -73,7 +74,38 @@
       <version>${hadoop.version}</version>
       <scope>provided</scope>
     </dependency>
-    
+
+    <dependency>
+    	<groupId>org.apache.mrunit</groupId>
+    	<artifactId>mrunit</artifactId>
+    	<version>0.9.0-incubating</version>
+    	<classifier>hadoop2</classifier>
+    	<scope>test</scope>
+    </dependency>
+    <dependency>
+    	<groupId>org.apache.hadoop</groupId>
+    	<artifactId>hadoop-core</artifactId>
+    	<version>1.2.1</version>
+    	<scope>test</scope>
+    </dependency>
+    <dependency>
+    	<groupId>org.hamcrest</groupId>
+    	<artifactId>hamcrest-all</artifactId>
+    	<version>1.1</version>
+    	<scope>test</scope>
+    </dependency>
+    <dependency>
+    	<groupId>org.apache.hadoop</groupId>
+    	<artifactId>hadoop-test</artifactId>
+    	<version>1.2.1</version>
+    	<scope>test</scope>
+    </dependency>
+    <dependency>
+    	<groupId>com.sun.jersey</groupId>
+    	<artifactId>jersey-core</artifactId>
+    	<version>1.18.1</version>
+    	<scope>test</scope>
+    </dependency>
   </dependencies>
  
   <repositories>
